--- a/CONOCEMAS.HTML
+++ b/CONOCEMAS.HTML
@@ -172,7 +172,7 @@ li a:hover {
         <button type="button" name="boton" onClick="Subir()">Crear usuario</button>
     </td>
     <td width="50%" align="center">
-        <button type="reset" name="botonR">Cancelar</button>
+        <button type="reset" name="botonR">Borrar</button>
     </td>
 </tr>
 </table>
