--- a/CONOCEMAS.HTML
+++ b/CONOCEMAS.HTML
@@ -66,7 +66,7 @@ li a:hover {
     <li><a href="URANO.html">URANO</a></li>
     <li><a href="NEPTUNO.html">NEPTUNO</a></li>
     <li><a href="PLUTON.html">PLUTON</a></li>
-    <li><a href="CONOCEMAS.html">FORMULARIO</a></li>
+    <li><a href="CONOCEMAS.HTML">FORMULARIO</a></li>
 </ul>
 <div id="XD">
 <form name="form1" method="POST" action="form.php">
