--- a/CONOCEMAS.HTML
+++ b/CONOCEMAS.HTML
@@ -129,7 +129,7 @@ li a:hover {
 </tr>
 <tr>
     <td width="50%" align="center">
-        <button type="button" name="boton">Crear usuario</button>
+        <button type="submit" name="boton">Crear usuario</button>
     </td>
     <td width="50%" align="center">
         <button type="reset" name="botonR">Borrar</button>
